# otus_01

./: .travis.yml  CMakeLists.txt
include/: lib.h  version.h
src/: lib.cpp  main.cpp
tests/: test_hello.cpp  test_version.cpp
